# django-svelte-vite-template

./: .gitignore  LICENSE  README.md  manage.py  package-lock.json  package.json  pyproject.toml  pyvenv.cfg  vite.config.js
core/templates/: base.html
django_svelte_vite/: asgi.py  settings.py  urls.py  wsgi.py
src/: App.svelte  Routes.svelte  index.html
src/routes/: Route1.svelte  Route2.svelte  Route3.svelte
staticfiles/: index.html  manifest.json
staticfiles/assets/: index.05c6f715.js  index.e7acab08.css  vendor.075b355c.js
