[tool.poetry]
name = "django_svelte_vite"
version = "0.1.0"
description = ""
authors = ["Luciano Ratamero <luciano@ratamero.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
black = "^21.6b0"

[tool.poetry.dev-dependencies]
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
